# OSTRICH

./: CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: Body.cpp.19265B0850A52029.idx  Body.cpp.E28FB9745C83AAF7.idx  Body.h.676328582F15003B.idx  Body.h.94C248BB9D168D24.idx  Camera.cpp.14F4341B8B3676CD.idx  Camera.cpp.EAEC82BF9B765501.idx  Camera.h.C3F0D90D42C80072.idx  Camera.h.D5F58B14C59A4D19.idx  Constants.h.2414FE3307822A13.idx  Constants.h.E4FF7AB2A4D23A04.idx  Constants.h.F7454BE9D1A2588A.idx  Control.cpp.712D1BFD4282BC72.idx  Control.h.9AF062DC11FA67EA.idx  Geometry.cpp.BD412C186E181036.idx  Geometry.h.7442D771D32A2AE5.idx  Keys.cpp.D7813368AF0C87A0.idx  Keys.h.FAD536F9E588BEAB.idx  Log.cpp.8D9E14B66537343A.idx  Log.h.99E7E967DCEF7AD7.idx  Massive.cpp.0A480C687A640976.idx  Massive.cpp.9CB4071DAAC31ACD.idx  Massive.h.2C266F16EBC11C52.idx  Massive.h.D826C2BBF61EABC0.idx  Massive.h.D826C2BBF61EABC0.sync-conflict-20220718-155208-GNTBB7H.idx  Material.h.2828A68B616C88B3.idx  Material.h.7FF6F6FF6055946C.idx  Mouse.cpp.58AE7D40C2F66A63.idx  Mouse.h.6589DFD0F8CE6A16.idx  Program.cpp.355CCFC323E5CCA3.idx  Program.cpp.3BFD626EDF2E733A.idx  Program.cpp.F2AB831288040ED9.idx  Program.cpp.F2AB831288040ED9.sync-conflict-20220718-155208-GNTBB7H.idx  Program.h.E2BA61938494E00E.idx  Program.h.F0CA81E3E3D31481.idx  Program.h.FBEC083261733543.idx  Rays.cpp.1D3E6C3E9CE8C0B2.idx  Rays.h.6778190C46B0DD58.idx  Shader.cpp.3A9BB59647184D77.idx  Shader.cpp.556BFDF618A119A7.idx  Shader.cpp.556BFDF618A119A7.sync-conflict-20220718-155208-GNTBB7H.idx  (+78 more)
resource/: fragment.fsh  vertex.vsh
resources/shaders/: icon-fragment.fsh  icon-vertex.vsh  massive-vertex.vsh  path-fragment.fsh  path-vertex.vsh
scenarios/: CalculateOrbit.py  Earth-Moon System.yml  SLT System.yml  Solar System.yml  d.yml  death.yml  example.yml  save-test.yml  slt-system.yml  the chinese  the chinese.yml  yooo.yml
src/: CMakeLists.txt  main.cpp
src/bodies/: Body.cpp  Body.h  BodyType.h  Massive.cpp  Massive.h  Massless.h
src/control/: Control.cpp  Control.h  control.h
src/input/: Keys.cpp  Keys.h  Mouse.cpp  Mouse.h  keys.cpp  keys.h  mouse.cpp  mouse.h
src/input/mouse/: Buttons.cpp  Buttons.h  Position.cpp  Position.h  Scroll.cpp  Scroll.h
src/main/: Bodies.cpp  Bodies.h  CMakeLists.txt  Control.cpp  Control.h  Main.cpp  Materials.h  OldSimulation.cpp  OldSimulation.h  OrbitPoint.h  Render.cpp  Render.h  Scenarios.cpp  Scenarios.h  Simulation.cpp  Simulation.h  main.cpp
src/main/bodies/: Body.cpp  Body.h  Massive.cpp  Massive.h  Massless.h
src/main/control/: control.cpp  control.h
src/main/input/: keys.cpp  keys.h  mouse.cpp  mouse.h
src/main/rendering/: Buffer.h  Camera.h  EBO.h  Material.h  Program.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.h  camera.cpp  camera.h  geometry-old.cpp  geometry-old.h  geometry.cpp  geometry.h
src/main/util/: Constants.h  Types.h  logging.cpp  logging.h  rays.h
src/main/window/: window.cpp  window.h
src/rendering/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  camera.cpp  camera.h
src/rendering/camera/: Camera.cpp  Camera.h  CameraTransition.cpp  CameraTransition.h  Settings.h  Util.cpp  Util.h
src/rendering/geometry/: Rays.cpp  Rays.h  Sphere.cpp  Sphere.h  Transition.cpp  Transition.h
src/rendering/interface/: BodyData.cpp  Explorer.cpp  Fonts.cpp  Fonts.h  Interface.cpp  Interface.h  MassiveRender.cpp  OrbitPaths.cpp  OrbitPaths.h  Style.cpp  Style.h
src/rendering/interface/Bodies/: MassiveRender.h
src/rendering/interface/BottomRightWindow/: BottomRightWindow.cpp  BottomRightWindow.h  LoadScenario.cpp  LoadScenario.h  SaveScenario.cpp  SaveScenario.h  ScenarioTable.cpp  ScenarioTable.h  SimulationControl.cpp  SimulationControl.h
src/rendering/interface/LeftWindow/: BodyData.cpp  BodyData.h  Explorer.cpp  Explorer.h  LeftWindow.cpp  LeftWindow.h
src/rendering/interface/TopRightWindow/: SimulationData.cpp  SimulationData.h  TopRightWindow.cpp  TopRightWindow.h
src/rendering/interface/icons/: BodyData.cpp  BodyData.h  Icon.cpp  Icon.h  Icons.cpp  Icons.h  MassiveIcon.cpp  MassiveIcon.h  MasslessIcon.cpp  MasslessIcon.h
src/rendering/shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h  Util.cpp  Util.h
src/rendering/structures/: Material.h
src/rendering/world/: Icon.cpp  Icon.h  IconVertex.h  Icons.cpp  Icons.h  MassiveRender.cpp  MassiveRender.h  OrbitPaths.cpp  OrbitPaths.h  VertexQueue.cpp  VertexQueue.h
src/scenarios/: ScenarioFileUtil.cpp  ScenarioFileUtil.h  Scenarios.cpp  Scenarios.h  YMLUtil.cpp  YMLUtil.h
src/simulation/: OrbitPoint.h  Simulation.cpp  Simulation.h  SimulationEnergy.cpp  SimulationEnergy.h  SimulationState.cpp  SimulationState.h
src/util/: Constants.h  Log.cpp  Log.h  Rays.cpp  Rays.h  TimeFormat.cpp  TimeFormat.h  Transition.cpp  Transition.h  Types.h  rays.cpp  transition.cpp
src/window/: Window.cpp  Window.h  window.cpp
